// Copyright 2021 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.browser;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/ui";

// ChromeService provides functions for managing chrome lifecycle, like
// creating and closing chrome sessions.
service ChromeService {
  // New enables testing for Chrome and logs into a Chrome session.
  // When try_reuse_session is set to true, service tries to reuse existing
  // chrome session if the reuse criteria is met.
  // Close must be called later to clean up the associated resources.
  rpc New(NewRequest) returns (google.protobuf.Empty) {}

  // Close releases the chrome session obtained by New.
  // When there is no chrome session, calling Close returns an error.
  rpc Close(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

// NewRequest to login to Chrome with configurable features, arguments and GAIA
// credentials.
message NewRequest {
  LoginMode login_mode = 1;

  // Credentials is login credentials.
  Credentials credentials = 2;

  // EnableFeatures contains extra Chrome features to enable.
  repeated string enable_features = 3;

  // DisableFeatures contains extra Chrome features to disable.
  repeated string disable_features = 4;

  // ExtraArgs returns extra arguments to pass to Chrome.
  repeated string extra_args = 5;

  // KeepState controls whether to keep existing user profiles.
  bool keep_state = 6;

  // TryReuseSession controls whether to try reusing a current user session.
  bool try_reuse_session = 7;

  // LacrosEnableFeatures extra Lacros features to enable.
  repeated string lacros_enable_features = 8;

  // LacrosDisableFeatures contains extra Lacros features to disable.
  repeated string lacros_disable_features = 9;

  // LacrosExtraArgs contains arguments to be passed through to Lacros.
  repeated string lacros_extra_args = 10;

  message Credentials {
    // Username is the user name of a user account. It is typically an email
    // address (e.g. example@gmail.com).
    string username = 1;
    // Password is the password of a user account.
    string password = 2;

    // GaiaId is a GAIA ID used on fake logins. If it is empty, an ID is
    // generated from the user name. The field is ignored on other type of
    // logins.
    string gaia_id = 3;

    // Contact is an email address of a user who owns a test account.
    // When logging in with a test account, its contact user may be
    // notified of a login attempt and asked for approval.
    string contact = 4;

    // ParentUsername is the user name of a parent account. It is used to
    // approve a login attempt when a child account is supervised by a
    // parent account.
    string parent_username = 5;

    // ParentPassword is the pass of a parent account. It is used to approve
    // a login attempt when a child account is supervised by a parent
    // account.
    string parent_password = 6;
  }

  // If |lacros| is set, Lacros will be enabled. If unset the system default
  // browser will be used.
  Lacros lacros = 11;
}

// LoginMode describes the user mode for the login.
enum LoginMode {
  LOGIN_MODE_UNSPECIFIED = 0;
  LOGIN_MODE_NO_LOGIN = 1;     // restart Chrome but don't log in
  LOGIN_MODE_FAKE_LOGIN = 2;   // fake login with no authentication
  LOGIN_MODE_GAIA_LOGIN = 3;   // real network-based login using GAIA backend
  LOGIN_MODE_GUEST_LOGIN = 4;  // sign in as ephemeral guest user
}

// Lacros to enable Lacros browser with configurable launch mode and/or
// selection of whether rootfs or stateful is used.
message Lacros {
  // Mode is whether Lacros is enabled as a primary browser or else.
  enum Mode {
    MODE_UNSPECIFIED = 0;
    MODE_SIDEBYSIDE = 1;
    MODE_PRIMARY = 2;
    MODE_ONLY = 3;
  }
  Mode mode = 1;

  // Selection is where to locate a Lacros browser. Use Rootfs as a default.
  // TODO(b/246961327): Support locally deployed Lacros binary when needed.
  enum Selection {
    SELECTION_UNSPECIFIED = 0;
    SELECTION_ROOTFS = 1;
    SELECTION_OMAHA = 2;
  }
  Selection selection = 2;
}
